--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
     <meta charset="UTF-8">
@@ -10,6 +10,7 @@
 </head>
 
 <body>
+    <!--div class="main"-->
     <header class="header">
         <div class="container">
             <div class="logo">
@@ -40,15 +41,29 @@
             </article>
         </div>
     </section>
-    <!-- 
-    <section class="content">
-        <h1>Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit...</h1>
-        <input type="button" value="Empezar">
+    <section id="contacto" class="contact">
+        <div class="container">
+            <div class="social">
+                <a target="_blank" class="social-link twitter" href="https://twitter.com/HomeroRieraG">
+                </a>
+                <a target="_blank" class="social-link facebook" href="https://facebook.com/leonidas.esteban">
+                </a>
+                <a target="_blank" class="social-link github" href="https://github.com/leonidasesteban">
+                </a>
+                <a target="_blank" class="social-link instagram" href="https://instagram.com/leonidasesteban">
+                </a>
+            </div>
+        </div>
     </section>
     <footer class="footer">
-        <div class="contact">Footer</div>
-        <div class="firma">Realizado por Homero Riera</div>
-    </footer> -->
+        <div class="container">
+            <div>
+                <p><small>Designed by <a href="https://twitter.com/HomeroRieraG">@HomeroRieraG</a></small></p>
+            </div>
+        </div>
+    </footer>
+    <!--/div-->
+
 </body>
 
 </html>
