--- a/index.html
+++ b/index.html
@@ -46,11 +46,11 @@
             <div class="social">
                 <a target="_blank" class="social-link twitter" href="https://twitter.com/HomeroRieraG">
                 </a>
-                <a target="_blank" class="social-link facebook" href="https://facebook.com/leonidas.esteban">
+                <a target="_blank" class="social-link facebook" href="#">
                 </a>
-                <a target="_blank" class="social-link github" href="https://github.com/leonidasesteban">
+                <a target="_blank" class="social-link github" href="#">
                 </a>
-                <a target="_blank" class="social-link instagram" href="https://instagram.com/leonidasesteban">
+                <a target="_blank" class="social-link instagram" href="#">
                 </a>
             </div>
         </div>
